Fix #32 scrollable tab on mobile

--- a/app/screens/Groups/AdminGroups/AdminGroups.scss
+++ b/app/screens/Groups/AdminGroups/AdminGroups.scss
@@ -3,4 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .admin-groups-card-content {
+    overflow-y: scroll;
+    width: 100%;
+  }
 }
